// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Station API v1 /iris 1`] = `
Object {
  "relatedStations": Array [
    Object {
      "creationts": "19-06-09 02:14:17.278",
      "db": "true",
      "ds100": "AH  K",
      "eva": "8071065",
      "meta": Array [
        "8002549",
        "8071066",
        "8076116",
      ],
      "name": "Hamburg Hbf (Kirchenallee)",
    },
    Object {
      "creationts": "19-06-09 02:14:17.159",
      "db": "true",
      "ds100": "AHS",
      "eva": "8098549",
      "meta": Array [
        "8002549",
        "8076116",
      ],
      "name": "Hamburg Hbf (S-Bahn)",
    },
    Object {
      "creationts": "19-06-09 02:14:17.278",
      "db": "true",
      "ds100": "AH  S",
      "eva": "8071066",
      "meta": Array [
        "8002549",
        "8071065",
        "8076116",
      ],
      "name": "Hamburg Hbf (Spitalerstraße)",
    },
    Object {
      "creationts": "19-06-09 02:14:17.508",
      "db": "true",
      "ds100": "AH  Z",
      "eva": "8076116",
      "meta": Array [
        "8002549",
        "8071065",
        "8071066",
        "8098549",
      ],
      "name": "Hamburg Hbf ZOB",
    },
  ],
  "station": Object {
    "creationts": "19-06-09 02:14:16.951",
    "db": "true",
    "ds100": "AH",
    "eva": "8002549",
    "meta": Array [
      "8071065",
      "8071066",
      "8076116",
      "8098549",
    ],
    "name": "Hamburg Hbf",
    "p": "13b|11a|11b|5a/b|7a/b|7a|7b|5a|5b|S|13a/b|11a/b|14a|14b|11|12a|12|12b|13|14|8a/b|6a/b|8a|8b|6a|6b|5|6|7|8|12a/b|14a/b|13a",
  },
}
`;

exports[`Station API v1 /search favendo 1`] = `
Array [
  Object {
    "favendoId": 2514,
    "id": "8002549",
    "title": "Hamburg Hbf",
  },
]
`;

exports[`Station API v1 /search openData 1`] = `
Array [
  Object {
    "DS100": "AH",
    "favendoId": 2514,
    "id": "8002549",
    "title": "Hamburg Hbf",
  },
]
`;

exports[`Station API v1 /search openData offline 1`] = `
Array [
  Object {
    "DS100": "AH",
    "favendoId": 2514,
    "id": "8002549",
    "title": "Hamburg Hbf",
  },
  Object {
    "DS100": "SHO",
    "favendoId": 2892,
    "id": "8000176",
    "title": "Homburg (Saar) Hbf",
  },
  Object {
    "DS100": "UNM",
    "favendoId": 4309,
    "id": "8010240",
    "title": "Naumburg (Saale) Hbf",
  },
]
`;
